Removed work-around for now fixed bug #2355.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@25882 a95241bf-73f2-0310-859d-f6bbb57e9c96